flash fix request update logic fix text fix(home, notif) create_name_truncator

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -48,7 +48,7 @@
       background-clip: padding-box
     .news
       position: absolute
-      top: 50%
+      top: 45%
       left: 50%
       width: 200px
       margin: 0 auto
@@ -57,18 +57,17 @@
       display: none
       color: #fff
       max-width: 200px
-      p
-        padding-bottom: 15px
       .title
-        white-space: nowrap
+        max-height: 2.2em
+        margin-bottom: 15px
+        font-size: 1.0em
+        line-height: 1.1em
         overflow: hidden
-        text-overflow: ellipsis
-        font-size: 1.1em
         font-family: 'Roboto'
         font-weight: bold
       .description
+        text-align: justify
         font-size: 0.8em
-        text-align: left
     //TODO create animation with js
     @keyframes first-news-circle
       from
